K8S/gateway/apiGateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80       # porta interna do cluster
      targetPort: 8080
  type: ClusterIP    # padrão interno do cluster
